edition = "2023";  // successor to proto2 and proto3

package storage;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";
option features.(pb.go).api_level = API_HYBRID;
option features.field_presence = IMPLICIT;
option features.enum_type = OPEN;
// `packed=false` needs to be transformed to field-level repeated_field_encoding
// features in Editions syntax
option features.json_format = ALLOW;
option features.utf8_validation = VERIFY;

message NotificationSchedule {
  reserved 1; // id, future field
  google.protobuf.Timestamp last_run = 2 [lazy = true];
}
